--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Refresh" content="0; url='https://bigbear.ai'" />
   <link rel="stylesheet" href="styles.css">
-  <title>Vanilla JavaScript App</title>
+  <title>OsoGrande.ai Redirect</title>
 </head>
 
 <body>
   <main>
-    <h1>Vanilla JavaScript App</h1>
+    <h1>OsoGrande.ai Redirect</h1>
   </main>
 </body>
 
